# gen_ai_training

./: README.md  pyproject.toml
00_introduccion_python_ia/: README.md
00_introduccion_python_ia/01_fundamentos_basicos/: README.md
00_introduccion_python_ia/02_estructuras_datos/: README.md
00_introduccion_python_ia/03_funciones_modularidad/: README.md
00_introduccion_python_ia/04_poo_para_ia/: README.md
00_introduccion_python_ia/05_intro_librerias_ds/: README.md
01_fundamentos_python/01_entorno_configuracion/: README.md
01_fundamentos_python/02_sintaxis_core/: README.md
01_fundamentos_python/03_bibliotecas_esenciales/: README.md
02_consumo_modelos_apis/01_openai_api/: README.md
02_consumo_modelos_apis/02_deepseek_integration/: README.md
02_consumo_modelos_apis/03_modelos_locales_antropicos/: README.md
02_consumo_modelos_apis/04_prompt_engineering/: README.md
03_rag_avanzado/01_arquitectura_rag/: README.md
03_rag_avanzado/02_embeddings_vector_dbs/: README.md
03_rag_avanzado/03_tecnicas_avanzadas/: README.md
04_protocolos_mcp/01_teoria_mcp/: README.md
04_protocolos_mcp/02_servidores_mcp/: README.md
04_protocolos_mcp/03_integracion_depuracion/: README.md
05_sistemas_agenticos/01_langchain_langgraph/: README.md
05_sistemas_agenticos/02_openai_agents_swarm/: README.md
05_sistemas_agenticos/03_google_adk/: README.md
05_sistemas_agenticos/05_guardrails/: README.md
07_proyecto_capstone/: README.md
docs/: Plan de Estudios Integral_ IA Generativa (Incluyendo ADK y A2A).md  adk_comprehensive_python_tutorial.md  checklist_estudiantes.md
(+32 files in other folders)
